2007-02-27  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.xsl: create toc for part and reference

	* style.css: Fix  placement of div.reference

2007-02-16  Damon Chaplin  <damon@gnome.org>

	* Released 1.8.

2007-02-16  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scan.in: only rebuild the .types file automatically on the
	very first run (i.e. when there are no sections or types files).

	* gtkdoc-scangobj.in: skip gnome_keyring_item_info_get_type if it is
	in the .types file as it isn't a real GObject type. This is a hack to
	avoid breaking the GNOME build. See bug #386508.

2007-02-11  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.xsl: fix prerequisite section in nav-header

2007-02-07  Stefan Kost  <ensonic@users.sf.net>

	* style.css: fixing footnote subscripts, make tables look nicer.
	#405051

2007-02-07  Damon Chaplin  <damon@gnome.org>

	* gtk-doc.make: make $(DOC_MODULE)-sections.txt and
	$(DOC_MODULE)-overrides.txt depend on scan-build.stamp, so that
	parallel make works. #404122, Ed Catmur.

2007-02-07  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scangobj.in: don't return if !G_TYPE_IS_OBJECT (object_type)
	as that means interface properties don't get output. This was broken
	by the patch for #348058.

2007-01-21  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in: added "--default-includes" option to specify the
	default "#include"s to place at the top of the synopsis of each
	section. Normally this is specified in a <INCLUDE>...</INCLUDE> line
	in MODULE-sections.txt, but if you are using the "--rebuild-sections"
	option to automatically rebuild the MODULE-sections.txt file you can't
	use that. #395023.

2007-01-21  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mktmpl.in (ReadTemplateFile): 
	* gtkdoc-mkdb.in (ReadTemplateFile): improved param regexp to handle
	weird macro vararg names like "format...". #398971.

2007-01-16  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in: support "Include" setting in section docs in source