@@ -1,3 +1,8 @@
+2007-03-16  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtkdoc-common.pl.in: handle preprocessor statements in enum and
+	struct declarations. Fixes #418027.
+
 2007-02-27  Stefan Kost  <ensonic@users.sf.net>
 
 	* gtk-doc.xsl: create toc for part and reference
